Mon Mar 28 20:02:17 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/arch/opensplice/handlers/OpenSplice_Instance_Handler.cpp:
        * examples/arch/PingPong/arch/opensplice/descriptors/PingPong_DomainQoS.cdp:
        * examples/arch/PingPong/models/PingPong.xme:

          Renamed DDS domain QoS property from 'DDSDomainQoS' to 'DomainQoS'.

Mon Mar 28 17:27:29 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * CUTS_Modeling.mwc:

          Disabled going into the CoSMIC and GAME directories.

        * cuts/arch/opensplice/OpenSplice_Servant.h:
        * cuts/arch/opensplice/OpenSplice_Servant.inl:

          Implemented get_publisher () and get_subscriber ()
          methods.

        * cuts/arch/opensplice/ccm/OpenSplice_CCM.mpc:
        * cuts/arch/opensplice/handlers/OpenSplice_Configurator.h:
        * cuts/arch/opensplice/handlers/OpenSplice_Configurator.cpp:
        * cuts/arch/opensplice/handlers/OpenSplice_Domain_File.h:
        * cuts/arch/opensplice/handlers/OpenSplice_Domain_File.cpp:
        * cuts/arch/opensplice/handlers/OpenSplice_Instance_Handler.h:
        * cuts/arch/opensplice/handlers/OpenSplice_Instance_Handler.cpp:
        * cuts/arch/opensplice/handlers/OpenSplice_Participant_File.h:
        * cuts/arch/opensplice/handlers/OpenSplice_Participant_File.cpp:
        * cuts/arch/opensplice/handlers/dds.h:
        * cuts/arch/opensplice/handlers/dds.inl:
        * cuts/arch/opensplice/handlers/dds.cpp:
        * cuts/arch/opensplice/handlers/handlers.mpc:
        * etc/schemas/iccm:
        * etc/schemas/iccm/dds.xsd:

          Added support for configuring the DomainParticipantFactoryQos from
          and XML document, which will be generated by DQML.

        * examples/arch/PingPong/arch/opensplice/descriptors/PingPong.cdp:
        * examples/arch/PingPong/arch/opensplice/descriptors/PingPong_DomainQoS.cdd:
        * examples/arch/PingPong/arch/opensplice/descriptors/PingPong_DomainQoS.cdp: