@@ -30,7 +30,7 @@
 // Global config object
 _config config;
 
-#include "game/Project.h"
+#include "game/mga/Project.h"
 #include "BE_Options.h"
 
 //
@@ -361,11 +361,11 @@ put_ComponentParameter (BSTR name, VARIANT newVal)
 int RawComponent::preprocess (IMgaProject * proj)
 {
   // Initialize the project's name.
-  GAME::Project project (proj);
+  GAME::Mga::Project project (proj);
   CUTS_BE_OPTIONS ()->project_name_ = project.name ();
 
   // Initialize the output directory.
-  GAME::Folder root = project.root_folder ();
+  GAME::Mga::Folder root = project.root_folder ();
   CUTS_BE_OPTIONS ()->output_directory_ = root->registry_value ("__OutputDir__/CUTS_CHAOS");
 
   return 0;
@@ -377,8 +377,8 @@ int RawComponent::preprocess (IMgaProject * proj)
 int RawComponent::postprocess (IMgaProject * proj)
 {
   // Get the root folder for the project.
-  GAME::Project project (proj);
-  GAME::Folder root = project.root_folder ();
+  GAME::Mga::Project project (proj);
+  GAME::Mga::Folder root = project.root_folder ();
 
   // Cache the output directory for future use.
   root->registry_value ("__OutputDir__/CUTS_CHAOS", CUTS_BE_OPTIONS ()->output_directory_);
